--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint": "^8.21.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
-    "vite": "^3.0.4"
+    "sass": "^1.54.4",
+    "vite": "^3.0.4",
+    "vite-svg-loader": "^3.4.0"
   }
 }
