--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.4",
-    "vite": "^3.0.4"
+    "vite": "^3.0.4",
+    "vite-svg-loader": "^3.4.0"
   }
 }
